--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -1,26 +1,49 @@
-worker_processes 1
-events { worker_connections 1024 }
+worker_processes auto;
+events {
+    worker_connections 1024;
+}
 
 http {
+    upstream account_upstream {
+        server account:5000;
+    }
+
+    upstream order_upstream {
+        server order:5000;
+    }
+
+    upstream license_upstream {
+        server license:5000;
+    }
+
     server {
         listen 80;
 
         location /account/ {
-            proxy_pass http://account:5000
-            proxy_set_header Host $host
-            proxy_set_header X-Real-IP $remote_addr
+            proxy_pass http://account_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         location /order/ {
-            proxy_pass http://order:5000
-            proxy_set_header Host $host
-            proxy_set_header X-Real-IP $remote_addr
+            proxy_pass http://order_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
 
         location /license/ {
-            proxy_pass http://license:5000
-            proxy_set_header Host $host
-            proxy_set_header X-Real-IP $remote_addr
+            proxy_pass http://license_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
         }
     }
 }
