--- a/services/account/src/.env
+++ b/services/account/src/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
-DB_NAME=your_db_name
-DB_USER=your_db_user
-DB_PASSWORD=your_db_password
+DB_HOST=pg_db
+DB_NAME=account
+DB_USER=svcfsw
+DB_PASSWORD=cfsw12345
 DB_PORT=5432
