[arch] improve api_gateway to make stable

--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -25,7 +25,8 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            proxy_connect_timeout 30s;
+            proxy_cache off;
         }
 
         location /order/ {
@@ -34,7 +35,8 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            proxy_connect_timeout 30s;
+            proxy_cache off;
         }
 
         location /license/ {
@@ -43,7 +45,8 @@ http {
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
-            proxy_cache_bypass $http_upgrade;
+            proxy_connect_timeout 30s;
+            proxy_cache off;
         }
     }
 }
