--- a/db/config/pg_hba.conf
+++ b/db/config/pg_hba.conf
@@ -1,3 +1,3 @@
 host        account         svcfsw             account               md5
 host        order           svcfsw             order                 md5
-host        license         svcfsw             license               md5
+host        authorize       svcfsw             authorize             md5
