--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -12,8 +12,8 @@ http {
         server order:5000;
     }
 
-    upstream license_upstream {
-        server license:5000;
+    upstream authorize_upstream {
+        server authorize:5000;
     }
 
     server {
@@ -39,8 +39,8 @@ http {
             proxy_cache off;
         }
 
-        location /license/ {
-            proxy_pass http://license_upstream/;
+        location /authorize/ {
+            proxy_pass http://authorize_upstream/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
