--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     image: postgres:15
     container_name: pg_db
     profiles:
+      - system
       - db
-      - all
     restart: always
     ports:
       - 5431:5432
@@ -22,18 +22,39 @@ services:
       - ./db/config/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
+  api_gateway:
+    image: nginx:1.23.3
+    container_name: api_gateway
+    profiles:
+      - system
+      - gateway
+    restart: unless-stopped
+    depends_on:
+      - account
+      - order
+      - authorize
+    volumes:
+      - ./api_gateway/nginx.conf:/etc/nginx/nginx.conf
+    ports:
+      - "8080:80"
+    networks:
+      - frontend-network
+      - backend-network
+
   account:
     image: account:1.0
     container_name: account
     profiles:
-      - sv
-      - all
+      - system
+      - allservices
       - account
     depends_on:
       - pg_db
     build:
       context: ./services/account/src
       dockerfile: Dockerfile
+    # ports:
+    #   - 5000:5000
     networks:
       - backend-network
       - db-network
@@ -42,52 +63,37 @@ services:
     image: order:1.0
     container_name: order
     profiles:
-      - sv
-      - all
+      - system
+      - allservices
       - order
     depends_on:
       - pg_db
     build:
       context: ./services/order/src
       dockerfile: Dockerfile
+    # ports:
+    #   - 5001:5000
     networks:
       - backend-network
       - db-network
 
-  license:
-    image: license:1.0
-    container_name: license
+  authorize:
+    image: authorize:1.0
+    container_name: authorize
     profiles:
-      - sv
-      - all
-      - license
+      - system
+      - allservices
+      - authorize
     depends_on:
       - pg_db
     build:
-      context: ./services/license/src
+      context: ./services/authorize/src
       dockerfile: Dockerfile
+    # ports:
+    #   - 5002:5000
     networks:
       - backend-network
       - db-network
-
-  api_gateway:
-    image: nginx:1.23.3
-    container_name: api_gateway
-    profiles:
-      - gateway
-      - all
-    restart: unless-stopped
-    depends_on:
-      - account
-      - order
-      - license
-    volumes:
-      - ./api_gateway/nginx.conf:/etc/nginx/nginx.conf
-    ports:
-      - "8080:80"
-    networks:
-      - frontend-network
-      - backend-network
 
 networks:
   frontend-network:
