--- a/services/account/src/Dockerfile
+++ b/services/account/src/Dockerfile
@@ -16,10 +16,10 @@ RUN apt-get update && \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install flask psycopg2-binary python-dotenv
+RUN pip3 install flask psycopg2-binary python-dotenv debugpy
 
 WORKDIR /app
 
 COPY . .
 
-CMD [ "python3", "app.py" ]
+CMD [ "python3", "-m", "debugpy", "--listen", "0.0.0.0:5600", "--wait-for-client", "app.py" ]
