--- a/services/account/src/.env
+++ b/services/account/src/.env
@@ -1,9 +1,6 @@
 SERVICE_NAME=Account
-
 DB_HOST=pg_db
 DB_NAME=account
-DB_USER=postgres
-DB_PASSWORD=postgres
-# DB_USER=svcfsw
-# DB_PASSWORD=cfsw12345
+DB_USER=svcfsw
+DB_PASSWORD=cfsw12345
 DB_PORT=5432
