--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -8,13 +8,13 @@ http {
         server account:5000;
     }
 
-    upstream order_upstream {
-        server order:5000;
-    }
+    # upstream order_upstream {
+    #     server order:5000;
+    # }
 
-    upstream authorize_upstream {
-        server authorize:5000;
-    }
+    # upstream authorize_upstream {
+    #     server authorize:5000;
+    # }
 
     server {
         listen 80;
@@ -29,24 +29,24 @@ http {
             proxy_cache off;
         }
 
-        location /order/ {
-            proxy_pass http://order_upstream/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_connect_timeout 30s;
-            proxy_cache off;
-        }
+        # location /order/ {
+        #     proxy_pass http://order_upstream/;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection 'upgrade';
+        #     proxy_set_header Host $host;
+        #     proxy_connect_timeout 30s;
+        #     proxy_cache off;
+        # }
 
-        location /authorize/ {
-            proxy_pass http://authorize_upstream/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection 'upgrade';
-            proxy_set_header Host $host;
-            proxy_connect_timeout 30s;
-            proxy_cache off;
-        }
+        # location /authorize/ {
+        #     proxy_pass http://authorize_upstream/;
+        #     proxy_http_version 1.1;
+        #     proxy_set_header Upgrade $http_upgrade;
+        #     proxy_set_header Connection 'upgrade';
+        #     proxy_set_header Host $host;
+        #     proxy_connect_timeout 30s;
+        #     proxy_cache off;
+        # }
     }
 }
