--- a/auto-test.yml
+++ b/auto-test.yml
@@ -1,6 +1,11 @@
 ---
 version: '3'
 
+x-test-service: &test_service
+  networks:
+    - backend-network
+  command: [ "python3", "-m", "robot", "-d", "result/", "testcases/api_test.robot" ]
+
 services:
   account_test:
     image: account_test:1.0
@@ -13,8 +18,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./services/account/test/result:/test/result
-    networks:
-      - backend-network
+    <<: *test_service
 
   order_test:
     image: order_test:1.0
@@ -27,8 +31,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./services/order/test/result:/test/result
-    networks:
-      - backend-network
+    <<: *test_service
 
   authorize_test:
     image: authorize_test:1.0
@@ -41,8 +44,7 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ./services/authorize/test/result:/test/result
-    networks:
-      - backend-network
+    <<: *test_service
 
 networks:
   backend-network:
