--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -15,6 +15,8 @@ x-app-service: &app_service
     - "${DEBUG_PORT}:5600"
   networks:
     - db-network
+  environment:
+      TZ: Asia/Ho_Chi_Minh
   command: [ "python3", "-m", "debugpy", "--listen", "0.0.0.0:${DEBUG_PORT}", "--wait-for-client", "app.py" ]
 
 services:
@@ -27,6 +29,7 @@ services:
     networks:
       - db-network
     environment:
+      TZ: Asia/Ho_Chi_Minh
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
