--- a/auto-test.yml
+++ b/auto-test.yml
@@ -20,6 +20,19 @@ services:
       - ./services/account/test/result:/test/result
     <<: *test_service
 
+  inventory_test:
+    image: inventory_test:1.0
+    container_name: inventory_test
+    profiles:
+      - allservice
+      - account
+    build:
+      context: ./services/inventory/test
+      dockerfile: Dockerfile
+    volumes:
+      - ./services/inventory/test/result:/test/result
+    <<: *test_service
+
 networks:
   backend-network:
     driver: bridge
