--- a/docker-compose.debug.yml
+++ b/docker-compose.debug.yml
@@ -7,7 +7,8 @@ x-app-service: &app_service
     dockerfile: Dockerfile
   container_name: ${APP_NAME}
   depends_on:
-    - pg_db
+    data_feed:
+      condition: service_completed_successfully
   volumes:
     - ./services/${APP_NAME}/src:/app
   ports:
@@ -15,6 +16,7 @@ x-app-service: &app_service
     - "${DEBUG_PORT}:5600"
   networks:
     - db-network
+    - backend-network
   environment:
       TZ: Asia/Ho_Chi_Minh
   command: [ "python3", "-m", "debugpy", "--listen", "0.0.0.0:${DEBUG_PORT}", "--wait-for-client", "app.py" ]
@@ -35,11 +37,26 @@ services:
       - ./db/data:/var/lib/postgres/data
       - ./db/config/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./db/config/pg_hba.conf:/etc/postgresql/pg_hba.conf
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./db/init:/docker-entrypoint-initdb.d
+
+  data_feed:
+    image: data_feed
+    build:
+      context: ./tool/testdata
+      dockerfile: Dockerfile
+    container_name: data_feed
+    depends_on:
+      - pg_db
+    networks:
+      - db-network
 
   app:
     <<: *app_service
 
 networks:
+  frontend-network:
+    driver: bridge
+  backend-network:
+    driver: bridge
   db-network:
     driver: bridge
