--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,15 +3,15 @@ repos:
     rev: v4.3.0
     hooks:
       - id: trailing-whitespace
-        files: \.(yml|yaml|py|sql|groovy|json)$|Dockerfile
+        files: \.(yml|yaml|py|sql|groovy|json|robot)$|Dockerfile
       - id: end-of-file-fixer
-        files: \.(yml|yaml|py|sql|groovy|json)$|Dockerfile
+        files: \.(yml|yaml|py|sql|groovy|json|robot)$|Dockerfile
       - id: check-yaml
         files: \.(yml|yaml)$
       - id: check-json
         files: \.json$
       - id: check-added-large-files
-        files: \.(yml|yaml|py|sql|groovy|json)$|Dockerfile
+        files: \.(yml|yaml|py|sql|groovy|json|robot)$|Dockerfile
 
   - repo: https://github.com/psf/black
     rev: 23.1.0
