--- a/api_gateway/nginx.conf
+++ b/api_gateway/nginx.conf
@@ -8,6 +8,14 @@ http {
         server account:5000;
     }
 
+    upstream inventory_upstream {
+        server inventory:5000;
+    }
+
+    upstream order_upstream {
+        server order:5000;
+    }
+
     # upstream order_upstream {
     #     server order:5000;
     # }
@@ -17,7 +25,7 @@ http {
     # }
 
     server {
-        listen 80;
+        listen 8080;
 
         location /account/ {
             proxy_pass http://account_upstream/;
@@ -29,15 +37,25 @@ http {
             proxy_cache off;
         }
 
-        # location /order/ {
-        #     proxy_pass http://order_upstream/;
-        #     proxy_http_version 1.1;
-        #     proxy_set_header Upgrade $http_upgrade;
-        #     proxy_set_header Connection 'upgrade';
-        #     proxy_set_header Host $host;
-        #     proxy_connect_timeout 30s;
-        #     proxy_cache off;
-        # }
+        location /inventory/ {
+            proxy_pass http://inventory_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_connect_timeout 30s;
+            proxy_cache off;
+        }
+
+        location /order/ {
+            proxy_pass http://order_upstream/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_connect_timeout 30s;
+            proxy_cache off;
+        }
 
         # location /authorize/ {
         #     proxy_pass http://authorize_upstream/;
