--- a/services/inventory/src/.env
+++ b/services/inventory/src/.env
@@ -1,6 +1,9 @@
 SERVICE_NAME=Inventory
+
 DB_HOST=pg_db
 DB_NAME=inventory
 DB_USER=svcfsw
 DB_PASSWORD=cfsw12345
 DB_PORT=5432
+
+EVENT_BUS_HOST=rabbitmq
