--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -9,7 +9,13 @@ x-app-service: &app_service
     - backend-network
   environment:
       TZ: Asia/Ho_Chi_Minh
+      PYTHONUNBUFFERED: 1
   command: [ "python3", "app.py" ]
+  healthcheck:
+    test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
+    interval: 30s
+    timeout: 10s
+    retries: 5
 
 services:
   pg_db:
@@ -19,8 +25,6 @@ services:
     profiles:
       - system
       - db
-    ports:
-      - ${DB_PORT}:5432
     networks:
       - db-network
     environment:
@@ -31,6 +35,34 @@ services:
       - ./db/config/postgresql.conf:/etc/postgresql/postgresql.conf
       - ./db/config/pg_hba.conf:/etc/postgresql/pg_hba.conf
       - ./db/init:/docker-entrypoint-initdb.d
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d postgres"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
+
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: rabbitmq
+    restart: always
+    profiles:
+      - system
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+    ports:
+      - "5672:5672"
+      - "15672:15672"
+    volumes:
+      - ./event_bus/lib:/var/lib/rabbitmq
+      - ./event_bus/log:/var/log/rabbitmq
+    networks:
+      - backend-network
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   data_feed:
     image: data_feed
@@ -42,7 +74,8 @@ services:
       - system
       - db
     depends_on:
-      - pg_db
+      pg_db:
+        condition: service_healthy
     networks:
       - db-network
 
@@ -53,14 +86,24 @@ services:
     profiles:
       - system
     depends_on:
-      - account
+      account:
+        condition: service_healthy
+      order:
+        condition: service_healthy
+      inventory:
+        condition: service_healthy
     volumes:
       - ./api_gateway/nginx.conf:/etc/nginx/nginx.conf
     ports:
-      - "8080:80"
+      - "8080:8080"
     networks:
       - frontend-network
       - backend-network
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 3
 
   account:
     image: account:${APP_TAG}
@@ -86,6 +129,19 @@ services:
       - inventory
     volumes:
       - ./services/inventory/src:/app
+    <<: *app_service
+
+  order:
+    image: order:${APP_TAG}
+    build:
+      context: ./services/order/src
+      dockerfile: Dockerfile
+    container_name: order
+    profiles:
+      - system
+      - order
+    volumes:
+      - ./services/order/src:/order
     <<: *app_service
 
 networks:
