init autotest for order

--- a/auto-test.yml
+++ b/auto-test.yml
@@ -34,6 +34,19 @@ services:
       - ./services/inventory/test/result:/test/result
     <<: *test_service
 
+  order_test:
+    image: order_test:1.0
+    container_name: order_test
+    profiles:
+      - allservice
+      - order
+    build:
+      context: ./services/order/test
+      dockerfile: Dockerfile
+    volumes:
+      - ./services/order/test/result:/test/result
+    <<: *test_service
+
 networks:
   frontend-network:
     driver: bridge
