[infra] build docker images multi-stage

--- a/services/order/src/Dockerfile
+++ b/services/order/src/Dockerfile
@@ -1,23 +1,40 @@
-FROM ubuntu:22.04
+# ============================
+# Stage 1: Build Dependencies
+# ============================
+FROM python:3.10-slim AS builder
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-###########################################
-# Install dependencies                    #
-###########################################
-
-RUN apt-get update && \
-    apt-get install -y \
-    curl \
-    postgresql \
-    python3.10 \
-    python3-pip \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install flask psycopg2-binary python-dotenv pika debugpy
+WORKDIR /tmp
+
+RUN pip3 install --no-cache-dir flask \
+    psycopg2-binary \
+    python-dotenv \
+    pika \
+    debugpy
+
+# ============================
+# Stage 2: Final
+# ============================
+FROM python:3.10-slim AS final
+
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update && \
+    apt-get install -y --no-install-recommends curl \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
+COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
+
 COPY . .
+
+CMD ["python", "app.py"]
