--- a/tool/testdata/Dockerfile
+++ b/tool/testdata/Dockerfile
@@ -1,28 +1,36 @@
-FROM ubuntu:22.04
+FROM python:3.10-slim AS builder
 
 ENV DEBIAN_FRONTEND=noninteractive
 
-###########################################
-# Install dependencies                    #
-###########################################
-
-RUN apt-get update && \
-    apt-get install -y \
-    postgresql \
-    python3.10 \
-    python3-pip \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-RUN pip3 install psycopg2 \
+WORKDIR /tmp
+
+RUN pip3 install --no-cache-dir  psycopg2-binary \
     google-auth \
     google-auth-oauthlib \
     google-auth-httplib2 \
     google-api-python-client
 
+# ============================
+# Stage 2: Final
+# ============================
+FROM python:3.10-slim AS final
+
+ENV DEBIAN_FRONTEND=noninteractive
+
+RUN apt-get update \
+    && apt-get clean \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
+
+COPY --from=builder /usr/local/lib/python3.10/site-packages /usr/local/lib/python3.10/site-packages
+COPY --from=builder /usr/local/bin /usr/local/bin
 
 COPY . .
 
-CMD [ "python3", "main.py" ]
+CMD ["python", "main.py"]
